# bk-aidev-agent-public

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  pyproject.toml  readme.md  readme_en.md
src/agent/: Makefile  pyproject.toml  readme.md  requirements.txt  test.py
src/agent/aidev_agent/: config.py
src/agent/tests/: test_api.py
src/agent/tests/services/: test_chat.py
src/agent/tests/utils/: test_factory.py
src/frontend/: package.json  readme.md
src/frontend/ai-blueking/: .prettierignore  .prettierrc.js  CHANGELOG.md  index.html  package.json  readme.md  tsconfig.dts.json  vite-env.d.ts
src/frontend/ai-blueking/lesscode/: config.json
src/frontend/ai-blueking/playground/: README.MD  app.vue  dynamic-demo.vue  main.ts
src/frontend/ai-blueking/playground/components/: changelog-viewer.vue  code-preview.vue  config-section.vue  demo-header.vue  documentation.vue  event-logger.vue  example-selector.vue  feature-cards.vue  markdown-viewer.vue  modal-layout.vue
src/frontend/ai-blueking/playground/configs/: demo-example.ts
src/frontend/ai-blueking/scripts/: bkui-hack.ts  vite.build.ts  vite.dev.ts  vite.utils.ts
src/frontend/ai-blueking/src/: ai-blueking-new.vue  global.d.ts  vite-env.d.ts  vue2.ts  vue3.ts
src/frontend/ai-blueking/src/components/: ai-cite.vue  ai-header.vue  ai-selected-box.vue  bar-button.vue  chat-input-box.vue  delete-confirm.vue  history-panel.vue  loading-overlay.vue  prompt-list.vue  render-message.vue  render-popup.vue  shortcuts-bar.vue  text-editor.vue
src/frontend/ai-blueking/src/components-new/: ai-header.vue  ai-selected-box.vue  chat-input-box.vue  render-message.vue
src/frontend/ai-blueking/src/composables/: use-custom-form.ts  use-input-interaction.ts  use-nimbus.ts  use-popup-props.ts  use-resizable-container.ts  use-scroll-show.ts  use-select-pop.ts  use-textarea-height.ts  use-tippy.ts
src/frontend/ai-blueking/src/config/: index.ts  shortcuts.ts
src/frontend/ai-blueking/src/lang/: index.ts
src/frontend/ai-blueking/src/plugins/: markdown-it-link-blank.ts
src/frontend/ai-blueking/src/store/: sessionStore.ts  types.ts
src/frontend/ai-blueking/src/styles/: mixins.scss
src/frontend/ai-blueking/src/types/: enum.ts  index.ts  vue-draggable-resizable.d.ts
src/frontend/ai-blueking/src/utils/: delete-confirm.ts  index.ts
src/frontend/publish-template/: .bk.development.env  .bk.env  .bk.production.env  bk.config.js  index.html  package-lock.json  package.json  postcss.config.js  server.js  tsconfig.json
src/frontend/publish-template/src/: main.ts
src/frontend/publish-template/types/: global.d.ts
src/frontend/vue2-playground/: .env.development  .eslintrc.js  README.md  package.json  vue.config.js
src/frontend/vue2-playground/public/: index.html
src/frontend/vue2-playground/src/: App.vue
src/frontend/web/: package.json  readme.md  server.cjs
src/frontend/web/docs/: .env.development  .env.production  changelog.md  faq.md  index.md  usage.md
template/: cookiecutter.json
template/{{cookiecutter.project_name}}/: .env.template  .gitignore  README.md  app_desc.yml  requirements.txt
template/{{cookiecutter.project_name}}/.ci/: action_pytest.yml
template/{{cookiecutter.project_name}}/agent/: apps.py  config.py
template/{{cookiecutter.project_name}}/agent/services/: agent.py
template/{{cookiecutter.project_name}}/agent/views/: builtin.py
template/{{cookiecutter.project_name}}/bk_plugin/: factory.py  meta.py  settings.py
template/{{cookiecutter.project_name}}/bk_plugin/apis/: urls.py  views.py
template/{{cookiecutter.project_name}}/bk_plugin/patch/: plugin.py  urls.py
template/{{cookiecutter.project_name}}/bk_plugin/versions/: assistant.py  assistant_components.py
(+52 files in other folders)
